I added the views and the urls to the guest app

--- a/my_django_app/guest/Templates/Guest/guest.html
+++ b/my_django_app/guest/Templates/Guest/guest.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <!--
 Template Name: Metronic - Bootstrap 4 HTML, React, Angular 9 & VueJS Admin Dashboard Theme
