--- a/my_django_app/customer/Templates/Customer/queueSetup.html
+++ b/my_django_app/customer/Templates/Customer/queueSetup.html
@@ -120,7 +120,7 @@ License: You must have a valid license purchased only from themeforest(the above
         <div class="row justify-content-center py-10 px-8 py-lg-12 px-lg-10">
             <div class="col-xl-12 col-xxl-7">
                 <!--begin: Wizard Form-->
-                <form class="form" id="kt_form">
+                <form method="POST" class="form" id="kt_form">
                     <!--begin: Wizard Step 1-->
                     <div class="pb-5" data-wizard-type="step-content" data-wizard-state="current">
                         <h4 class="mb-10 font-weight-bold text-dark">Setup Your Queues</h4>
@@ -134,9 +134,9 @@ License: You must have a valid license purchased only from themeforest(the above
                     <div class="form-group row">
                         <!-- <label class="col-form-label text-right col-lg-3 col-sm-12">Outside of the box example</label> -->
                         <div class="col-lg-6 col-md-9 col-sm-12">
-                            <label>Service</label>
+                            <label>Categories</label>
                             <!-- <input type="text" class="form-control" name="queueService" placeholder="Choose your service" value=""/> -->
-                            <input id="kt_tagify_3" class="form-control" name='tags-outside' class='form-control tagify tagify--outside' value='' placeholder='Write some services'/>
+                            <input id="kt_tagify_3" class="form-control" name='categories' class='form-control tagify tagify--outside' value='' placeholder='Write some services'/>
 
                             <div class="mt-3 text-muted">
                                 Please enter the services of the queue.
@@ -308,15 +308,16 @@ License: You must have a valid license purchased only from themeforest(the above
 <!--end::Page Scripts-->
 
 <script>
-    var input = document.querySelector('input[name=tags-outside]')
+    var input = document.querySelector('input[name=categories]')
         // init Tagify script on the above inputs
         var tagify = new Tagify(input, {
-            whitelist: ["foo", "bar", "baz"],
+            whitelist: [],
             dropdown: {
                 position: "input",
                 enabled: 0 // always opens dropdown when input gets focus
             }
         })
+        // console.log(tagify.value);
 </script>
     </body>
 <!--end::Body-->
