--- a/my_django_app/guest/Templates/guest/waitingPage.html
+++ b/my_django_app/guest/Templates/guest/waitingPage.html
@@ -3,20 +3,27 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{%static 'guest/dark.css'%}">
-    <link rel="stylesheet" href="{%static 'guest/dark1.css'%}">
-    <link rel="stylesheet" href="{%static 'guest/light.css'%}">
-    <link rel="stylesheet" href="{%static 'guest/light1.css'%}">
-    <link rel="stylesheet" href="{%static 'guest/login-3.css'%}">
-    <link rel="stylesheet" href="{%static 'guest/plugins.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'guest/prismjs.bundle.css'%}">
-    <link rel="stylesheet" href="{%static 'guest/style.bundle.css'%}">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    
+        <!--begin::Global Theme Styles(used by all pages)-->
+        <link rel="stylesheet" href="{%static 'customer/plugins.bundle.css'%}">
+        <link rel="stylesheet" href="{%static 'customer/prismjs.bundle.css'%}">
+        <link rel="stylesheet" href="{%static 'customer/style.bundle.css'%}">
+        <!--end::Global Theme Styles-->
+    
+        <!--begin::Layout Themes(used by all pages)-->
+    
+        <link rel="stylesheet" href="{%static 'customer/dark.css'%}">
+        <link rel="stylesheet" href="{%static 'customer/dark1.css'%}">
+        <link rel="stylesheet" href="{%static 'customer/light.css'%}">
+        <link rel="stylesheet" href="{%static 'cthe exampustomer/light1.css'%}">
+        <!--end::Layout Themes-->
+    
+    </head>
 <body>
     <div class="d-flex align-items-center justify-content-center" style="height: 700px">
     <div class="d-flex flex-column-fluid">
