--- a/my_django_app/guest/Templates/guest/waitingPage.html
+++ b/my_django_app/guest/Templates/guest/waitingPage.html
@@ -3,83 +3,61 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    
-        <!--begin::Global Theme Styles(used by all pages)-->
-        <link rel="stylesheet" href="{%static 'customer/plugins.bundle.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/prismjs.bundle.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/style.bundle.css'%}">
-        <!--end::Global Theme Styles-->
-    
-        <!--begin::Layout Themes(used by all pages)-->
-    
-        <link rel="stylesheet" href="{%static 'customer/dark.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/dark1.css'%}">
-        <link rel="stylesheet" href="{%static 'customer/light.css'%}">
-        <link rel="stylesheet" href="{%static 'cthe exampustomer/light1.css'%}">
-        <!--end::Layout Themes-->
-    
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <!--begin::Global Theme Styles(used by all pages)-->
+    <link rel="stylesheet" href="{%static 'guest/plugins.bundle.css'%}">
+    <link rel="stylesheet" href="{%static 'guest/prismjs.bundle.css'%}">
+    <link rel="stylesheet" href="{%static 'guest/style.bundle.css'%}">
+    <!--end::Global Theme Styles-->
+
+    <!--begin::Layout Themes(used by all pages)-->
+
+    <link rel="stylesheet" href="{%static 'guest/dark.css'%}">
+    <link rel="stylesheet" href="{%static 'guest/dark1.css'%}">
+    <link rel="stylesheet" href="{%static 'guest/light.css'%}">
+    <link rel="stylesheet" href="{%static 'guest/light1.css'%}">
+    <!--end::Layout Themes-->
+
+</head>
+
 <body>
     <div class="d-flex align-items-center justify-content-center" style="height: 700px">
-    <div class="d-flex flex-column-fluid">
-        <div class=" container ">
-            <div class="row">
-                <div class="col-lg-6">
-                    
-                    <div class="card card-custom">
-                        <div class="card-header">
-                            <div class="card-title">
-                                <h3 class="card-label">
-                                    Basic Card
-                                    <small>sub title</small>
-                                </h3>
+        <div class="d-flex flex-column-fluid">
+            <div class=" container ">
+                <div class="row justify-content-md-center">
+                    <div class="col-xs-6">
+
+                        <div class="card card-custom">
+                            <div class="card-header">
+                                <div class="card-title">
+                                    <h3 class="card-label">
+                                        Category
+                                    </h3>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card-body">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever since the
-                            1500s,
-                            when an unknown printer took a galley of type and scrambled. Lorem Ipsum
-                            is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever since the
-                            1500s,
-                            when an unknown printer took a galley of type and scrambled.
+                            <div class="card-body">
+                                <h1>Cash Transcation</h1>
+                            </div>
                         </div>
                     </div>
-
-                    
                 </div>
-                <div class="col-lg-6">
-                    
-                    <div class="card card-custom">
-                        <div class="card-header">
-                            <div class="card-title">
-                                <h3 class="card-label">
-                                    Card Footer
-                                    <small>sub title</small>
-                                </h3>
+                <br>
+                <div class="row justify-content-md-center">
+                    <div class="col-xs-6">
+                        <div class="card card-custom">
+                            <div class="card-body">
+                                <h1 style="font-size: 200px; text-align: center;">1</h1>
                             </div>
-                            
-                        </div>
-                        <div class="card-body">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever since the
-                            1500s,
-                            when an unknown printer took a galley of type and scrambled. Lorem Ipsum
-                            is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever since the
-                            1500s,
-                            when an unknown printer took a galley of type and scrambled.
-                        </div>
-                        <div class="card-footer d-flex justify-content-between">
-                            <a href="#" class="btn btn-light-primary font-weight-bold">Widthraw</a>
-                            <a href="#" class="btn btn-outline-secondary font-weight-bold">Learn
-                                more</a>
+                            <div class="card-footer d-flex justify-content-between">
+                                <a href="#" class="btn btn-light-primary font-weight-bold">Widthraw</a>
+                                <input type="text" disabled="disabled" placeholder="Time Left" style="width: 100px;">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -89,76 +67,77 @@
     </div>
     <!--end::Row-->
     <script>var HOST_URL = "https://preview.keenthemes.com/metronic/theme/html/tools/preview";</script>
-        <!--begin::Global Config(global config for global JS scripts)-->
-        <script>
-            var KTAppSettings = {
-    "breakpoints": {
-        "sm": 576,
-        "md": 768,
-        "lg": 992,
-        "xl": 1200,
-        "xxl": 1400
-    },
-    "colors": {
-        "theme": {
-            "base": {
-                "white": "#ffffff",
-                "primary": "#3699FF",
-                "secondary": "#E5EAEE",
-                "success": "#1BC5BD",
-                "info": "#8950FC",
-                "warning": "#FFA800",
-                "danger": "#F64E60",
-                "light": "#E4E6EF",
-                "dark": "#181C32"
+    <!--begin::Global Config(global config for global JS scripts)-->
+    <script>
+        var KTAppSettings = {
+            "breakpoints": {
+                "sm": 576,
+                "md": 768,
+                "lg": 992,
+                "xl": 1200,
+                "xxl": 1400
             },
-            "light": {
-                "white": "#ffffff",
-                "primary": "#E1F0FF",
-                "secondary": "#EBEDF3",
-                "success": "#C9F7F5",
-                "info": "#EEE5FF",
-                "warning": "#FFF4DE",
-                "danger": "#FFE2E5",
-                "light": "#F3F6F9",
-                "dark": "#D6D6E0"
+            "colors": {
+                "theme": {
+                    "base": {
+                        "white": "#ffffff",
+                        "primary": "#3699FF",
+                        "secondary": "#E5EAEE",
+                        "success": "#1BC5BD",
+                        "info": "#8950FC",
+                        "warning": "#FFA800",
+                        "danger": "#F64E60",
+                        "light": "#E4E6EF",
+                        "dark": "#181C32"
+                    },
+                    "light": {
+                        "white": "#ffffff",
+                        "primary": "#E1F0FF",
+                        "secondary": "#EBEDF3",
+                        "success": "#C9F7F5",
+                        "info": "#EEE5FF",
+                        "warning": "#FFF4DE",
+                        "danger": "#FFE2E5",
+                        "light": "#F3F6F9",
+                        "dark": "#D6D6E0"
+                    },
+                    "inverse": {
+                        "white": "#ffffff",
+                        "primary": "#ffffff",
+                        "secondary": "#3F4254",
+                        "success": "#ffffff",
+                        "info": "#ffffff",
+                        "warning": "#ffffff",
+                        "danger": "#ffffff",
+                        "light": "#464E5F",
+                        "dark": "#ffffff"
+                    }
+                },
+                "gray": {
+                    "gray-100": "#F3F6F9",
+                    "gray-200": "#EBEDF3",
+                    "gray-300": "#E4E6EF",
+                    "gray-400": "#D1D3E0",
+                    "gray-500": "#B5B5C3",
+                    "gray-600": "#7E8299",
+                    "gray-700": "#5E6278",
+                    "gray-800": "#3F4254",
+                    "gray-900": "#181C32"
+                }
             },
-            "inverse": {
-                "white": "#ffffff",
-                "primary": "#ffffff",
-                "secondary": "#3F4254",
-                "success": "#ffffff",
-                "info": "#ffffff",
-                "warning": "#ffffff",
-                "danger": "#ffffff",
-                "light": "#464E5F",
-                "dark": "#ffffff"
-            }
-        },
-        "gray": {
-            "gray-100": "#F3F6F9",
-            "gray-200": "#EBEDF3",
-            "gray-300": "#E4E6EF",
-            "gray-400": "#D1D3E0",
-            "gray-500": "#B5B5C3",
-            "gray-600": "#7E8299",
-            "gray-700": "#5E6278",
-            "gray-800": "#3F4254",
-            "gray-900": "#181C32"
-        }
-    },
-    "font-family": "Poppins"
-};
-        </script>
-        <!--end::Global Config-->
+            "font-family": "Poppins"
+        };
+    </script>
+    <!--end::Global Config-->
 
-    	<!--begin::Global Theme Bundle(used by all pages)-->
-                    <!-- <link rel="stylesheet" href="{%static 'customer/login-3.css'%}"> -->
-    	    	   <script src="{%static 'guest/plugins.bundle.js'%}"></script>
-    	    	   <script src="{%static 'guest/prismjs.bundle.js'%}"></script>
-    	    	   <script src="{%static 'guest/scripts.bundle.js'%}"></script>
-		    	   <!-- <script src="CMPS253/Template/assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
+    <!--begin::Global Theme Bundle(used by all pages)-->
+    <!-- <link rel="stylesheet" href="{%static 'customer/login-3.css'%}"> -->
+    <script src="{%static 'guest/plugins.bundle.js'%}"></script>
+    <script src="{%static 'guest/prismjs.bundle.js'%}"></script>
+    <script src="{%static 'guest/scripts.bundle.js'%}"></script>
+    <!-- <script src="CMPS253/Template/assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
 		    	   <script src="CMPS253/Template/assets/js/scripts.bundle.js"></script> -->
-				<!--end::Global Theme Bundle-->
+    <!--end::Global Theme Bundle-->
 </body>
+
 </html>
